# av-sync-detector

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithm.md
docs/superpowers/plans/: 2026-06-20-sync-stability-fingerprints.md
src/avsync_detector/: __init__.py  align.py  cli.py  live.py  result.py  tui.py
tests/: test_align.py  test_cli.py  test_ffmpeg_commands.py  test_live_analyzer.py  test_live_features.py  test_tui.py
