[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "av-sync-detector"
version = "0.1.0"
description = "Live source-vs-output A/V alignment detector using content math, not timestamps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "rich>=13.7",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
avsync-detector = "avsync_detector.cli:main"

[project.urls]
Homepage = "https://github.com/boraacer/av-sync-detector"
Issues = "https://github.com/boraacer/av-sync-detector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/avsync_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
